--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\Eric\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
 version = 3.11.5
 executable = C:\Users\Eric\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\Eric\AppData\Local\Programs\Python\Python311\python.exe -m venv D:\python-pos-api\myenv
+command = C:\Users\Eric\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\Eric\Documents\GitHub\python-fast-api
